<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <ImageView
        android:id="@+id/text_enter_top_icon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_keyboard_black_24dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:background="?attr/colorPrimary"/>

    <TextView
        android:id="@+id/text_enter_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/keyboard_enter"
        android:layout_alignParentTop="true"
        android:layout_toRightOf="@+id/text_enter_top_icon"
        android:textAlignment="center"
        android:padding="5dp"
        android:background="?attr/colorPrimary"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/text_enter_text"
        android:layout_below="@+id/text_enter_title"
        android:layout_alignParentLeft="true"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/text_enter_text"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">

    <Button
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:id="@+id/text_enter_send_button"
        android:text="@string/send_text"/>

    <Button
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:id="@+id/text_enter_cancel_button"
        android:text="@string/cancel_text" />

        <com.freeware.nikola.blueraspberrycontrol.KeyboardButtonView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/button_custom"
            app:text_upper_left="D"
            app:text_bottom_right="А"/>

    </LinearLayout>

</RelativeLayout>